--- a/src/Dhgms.GripeWithRoslyn/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer.csproj
+++ b/src/Dhgms.GripeWithRoslyn/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer.csproj
@@ -35,10 +35,12 @@
   <ItemGroup>
     <Compile Include="Analyzers\BaseInvocationExpressionAnalyzer.cs" />
     <Compile Include="Analyzers\BaseInvocationUsingDllAnalyzer.cs" />
+    <Compile Include="Analyzers\BaseInvocationUsingNamespaceAnalyzer.cs" />
     <Compile Include="Analyzers\BaseInvocationWithArgumentsAnalzyer.cs" />
     <Compile Include="Analyzers\FluentDataAutoMapAnalyzer.cs" />
     <Compile Include="Analyzers\FluentDataQueryManyWithNullArgumentAnalyzer.cs" />
     <Compile Include="Analyzers\OracleUnmanagedDataAccessDllAnalyzer.cs" />
+    <Compile Include="Analyzers\RemotingServicesAnalyzer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.Designer.cs">
       <AutoGen>True</AutoGen>
