--- a/src/Dhgms.GripeWithRoslyn/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer/Diagnostic.nuspec
+++ b/src/Dhgms.GripeWithRoslyn/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer/Diagnostic.nuspec
@@ -4,8 +4,8 @@
     <id>Dhgms.GripeWithRoslyn.Analyzer</id>
     <version>1.0.0.0</version>
     <title>Dhgms.GripeWithRoslyn.Analyzer</title>
-    <authors>dv012201</authors>
-    <owners>dv012201</owners>
+    <authors>dpvreony,dhgms-solutions</authors>
+    <owners>dpvreony,dhgms-solutions</owners>
     <licenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</licenseUrl>
     <projectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</projectUrl>
     <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>
