--- a/src/Dhgms.GripeWithRoslyn.IntegrationTests/packages.config
+++ b/src/Dhgms.GripeWithRoslyn.IntegrationTests/packages.config
@@ -1,4 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FluentData" version="3.0.1.0" targetFramework="net452" />
+  <package id="reactiveui" version="6.5.0" targetFramework="net452" />
+  <package id="reactiveui-core" version="6.5.0" targetFramework="net452" />
+  <package id="reactiveui-events" version="6.5.0" targetFramework="net452" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Main" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net452" />
+  <package id="Rx-Xaml" version="2.2.5" targetFramework="net452" />
+  <package id="Splat" version="1.6.2" targetFramework="net452" />
 </packages>
