updates to get to new project format and get it building

--- a/src/Dhgms.GripeWithRoslyn.Analyzer.Test/Dhgms.GripeWithRoslyn.Analyzer.Test.csproj
+++ b/src/Dhgms.GripeWithRoslyn.Analyzer.Test/Dhgms.GripeWithRoslyn.Analyzer.Test.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net462</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +14,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Dhgms.GripeWithRoslyn.Analyzers\Dhgms.GripeWithRoslyn.Analyzers.csproj" />
+    <ProjectReference Include="..\Dhgms.GripeWithRoslyn.Analyzer\Dhgms.GripeWithRoslyn.Analyzer.csproj" />
   </ItemGroup>
 </Project>
