--- a/src/Dhgms.GripeWithRoslyn.Analyzer.UnitTests/Dhgms.GripeWithRoslyn.Analyzer.UnitTests.csproj
+++ b/src/Dhgms.GripeWithRoslyn.Analyzer.UnitTests/Dhgms.GripeWithRoslyn.Analyzer.UnitTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net462</TargetFramework>
+    <TargetFrameworks>netcoreapp2.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
