--- a/src/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer.csproj
+++ b/src/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer.csproj
@@ -1,10 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net46;netstandard1.3;netstandard1.5;netstandard2.0</TargetFrameworks>
+    <Authors>DHGMSSolutions,dpvreony</Authors>
+    <Company>DHGMS Solutions</Company>
+    <Product>Dhgms Gripe With Roslyn</Product>
+    <Copyright>Copyright 2004-2018. All Rights Reserved</Copyright>
+    <PackageProjectUrl>https://github.com/DHGMS-Solutions/gripewithroslyn</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/DHGMS-Solutions/gripewithroslyn/</RepositoryUrl>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/DHGMS-Solutions/gripewithroslyn/master/LICENSE</PackageLicenseUrl>
+    <AssemblyVersion>0.0.1.9999</AssemblyVersion>
+    <FileVersion>0.0.1.9999</FileVersion>
+    <DebugType>full</DebugType>
+    <DebugSymbols>True</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
+    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.10.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="2.10.0" />
   </ItemGroup>
