Add EnforceExtendedAnalyzerRules which has come in from rosyln sdk

--- a/src/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer.csproj
+++ b/src/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer.csproj
@@ -4,6 +4,7 @@
     <DebugType>full</DebugType>
     <DebugSymbols>True</DebugSymbols>
     <DevelopmentDependency>true</DevelopmentDependency>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
 
   <ItemGroup>
