--- a/src/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer.csproj
+++ b/src/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer.csproj
@@ -16,7 +16,9 @@
   </ItemGroup>
 
   <Target Name="_AddAnalyzersToOutput">
-    <ItemGroup><TfmSpecificPackageFile Include="$(OutputPath)\Dhgms.GripeWithRoslyn.Analyzer.dll" PackagePath="analyzers/dotnet/cs" />
+    <ItemGroup>
+        <TfmSpecificPackageFile Include="$(OutputPath)\Dhgms.GripeWithRoslyn.Analyzer.dll" PackagePath="analyzers/dotnet/cs" />
+        <TfmSpecificPackageFile Include="$(OutputPath)\Dhgms.GripeWithRoslyn.Analyzer.xml" PackagePath="analyzers/dotnet/cs" />
     </ItemGroup>
   </Target>
 </Project>
