--- a/src/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer.csproj
+++ b/src/Dhgms.GripeWithRoslyn.Analyzer/Dhgms.GripeWithRoslyn.Analyzer.csproj
@@ -20,6 +20,7 @@
   <Target Name="_AddAnalyzersToOutput">
     <ItemGroup>
         <TfmSpecificPackageFile Include="$(OutputPath)\Dhgms.GripeWithRoslyn.Analyzer.dll" PackagePath="analyzers/dotnet/cs" />
+        <TfmSpecificPackageFile Include="$(OutputPath)\Dhgms.GripeWithRoslyn.Analyzer.pdb" PackagePath="analyzers/dotnet/cs" />
         <TfmSpecificPackageFile Include="$(OutputPath)\Dhgms.GripeWithRoslyn.Analyzer.xml" PackagePath="analyzers/dotnet/cs" />
     </ItemGroup>
   </Target>
