--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,6 +71,12 @@ jobs:
         mkdir artifacts\omd
         mkdir artifacts\docfx
 
+    - name: Add Visual Studio SDK
+      run: |
+        dotnet tool update -g dotnet-vs
+        vs where release
+        vs modify release Enterprise +Microsoft.VisualStudio.Workload.VisualStudioExtension
+
     - name: Restore Packages
       run: |
         dotnet restore ${{ env.solutionpath }} /bl:artifacts\\binlog\\restore.binlog
