--- a/src/Dhgms.GripeWithRoslyn.Vsix/Dhgms.GripeWithRoslyn.Vsix.csproj
+++ b/src/Dhgms.GripeWithRoslyn.Vsix/Dhgms.GripeWithRoslyn.Vsix.csproj
@@ -28,6 +28,7 @@
     <StartProgram Condition="'$(DevEnvDir)' != ''">$(DevEnvDir)devenv.exe</StartProgram>
     <StartArguments>/rootsuffix Exp</StartArguments>
     <RuntimeIdentifiers>win</RuntimeIdentifiers>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
