--- a/src/Dhgms.GripeWithRoslyn.Vsix/Dhgms.GripeWithRoslyn.Vsix.csproj
+++ b/src/Dhgms.GripeWithRoslyn.Vsix/Dhgms.GripeWithRoslyn.Vsix.csproj
@@ -47,6 +47,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\release\Dhgms.GripeWithRoslyn.Vsix.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
