--- a/src/Directory.build.props
+++ b/src/Directory.build.props
@@ -13,7 +13,7 @@
     <RepositoryType>git</RepositoryType>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <CodeAnalysisRuleSet>$(MSBuildThisFileDirectory)analyzers.ruleset</CodeAnalysisRuleSet>
-    <IsTestProject>$(MSBuildProjectName.Contains('Tests'))</IsTestProject>
+    <IsTestProject>$(MSBuildProjectName.EndsWith('Tests'))</IsTestProject>
     <IsWasmProject>$(MSBuildProjectName.Contains('Wasm'))</IsWasmProject>
     <DebugType>Embedded</DebugType>
     <!-- Optional: Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
@@ -26,30 +26,41 @@
     <!--<EnableSourceLink Condition=" '$(OS)' != 'Windows_NT' AND '$(MSBuildRuntimeType)' != 'Core' ">false</EnableSourceLink>-->
     <EnableSourceLink>false</EnableSourceLink>
     <EnableSourceControlManagerQueries>$(EnableSourceLink)</EnableSourceControlManagerQueries>
-	<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-	<WarningsAsErrors />
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
+    <WarningsAsErrors />
   </PropertyGroup>
 
-  <ItemGroup Condition="$(IsTestProject)">
-    <PackageReference Include="Foundatio.XUnit" Version="10.6.1" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
-    <PackageReference Include="xunit" Version="2.5.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.1" />
-    <PackageReference Include="Xunit.StaFact" Version="1.1.11" />
-    <!--<PackageReference Include="PublicApiGenerator" Version="8.1.0" />-->
-    <PackageReference Include="GitHubActionsTestLogger" Version="2.3.3" />
-  </ItemGroup>
+  <!--
+  This choose block is used because if you use an old style csproj file, it won't apply conditions to item groups.
+  see: https://github.com/dotnet/project-system/issues/4175
+  -->
+  <Choose>
+    <When Condition="'$(IsTestProject)' == 'true'">
+      <ItemGroup>
+        <PackageReference Include="Foundatio.XUnit" Version="10.6.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
+        <PackageReference Include="xunit" Version="2.5.1" />
+        <PackageReference Include="xunit.runner.visualstudio" Version="2.5.1" />
+        <PackageReference Include="Xunit.StaFact" Version="1.1.11" />
+        <!--<PackageReference Include="PublicApiGenerator" Version="8.1.0" />-->
+        <PackageReference Include="GitHubActionsTestLogger" Version="2.3.3" />
+        <!--<Compile Include="$(MSBuildThisFileDirectory)ApiGeneratorGlobalSuppressions.cs" />-->
+      </ItemGroup>
+    </When>
+    <Otherwise>
+      <Choose>
+        <When Condition="'$(SourceLinkEnabled)' != 'false'">
+          <ItemGroup>
+            <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
+          </ItemGroup>
+        </When>
+      </Choose>
+    </Otherwise>
+  </Choose>
 
-  <ItemGroup Condition="$(IsTestProject)">
-    <!--<Compile Include="$(MSBuildThisFileDirectory)ApiGeneratorGlobalSuppressions.cs" />-->
-  </ItemGroup>
 
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)..\LICENSE" Pack="true" PackagePath="LICENSE" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(IsTestProject)' != 'true' and '$(SourceLinkEnabled)' != 'false'">
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
   </ItemGroup>
 
   <ItemGroup>
