--- a/src/Dhgms.GripeWithRoslyn.Cmd/Dhgms.GripeWithRoslyn.Cmd.csproj
+++ b/src/Dhgms.GripeWithRoslyn.Cmd/Dhgms.GripeWithRoslyn.Cmd.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.7.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.Workspaces" Version="4.7.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.Workspaces.MSBuild" Version="4.7.0" />
+    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.20371.2" />
   </ItemGroup>
 
   <ItemGroup>
