convert to dotnet tool

--- a/src/Dhgms.GripeWithRoslyn.Cmd/Dhgms.GripeWithRoslyn.Cmd.csproj
+++ b/src/Dhgms.GripeWithRoslyn.Cmd/Dhgms.GripeWithRoslyn.Cmd.csproj
@@ -1,12 +1,21 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8</TargetFramework>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
-    <IsPackable>false</IsPackable>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>gripe</ToolCommandName>
+    <AssemblyName>gripe</AssemblyName>
+    <PackageDescription>dot net tool to run Gripe Code Analysis.</PackageDescription>
   </PropertyGroup>
+
+  <Target Name="AdjustVersion" DependsOnTargets="GetBuildVersion" AfterTargets="GetBuildVersion">
+    <PropertyGroup>
+      <PackageVersion>$(PackageVersion)-beta</PackageVersion>
+    </PropertyGroup>
+  </Target>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Build.Locator" Version="1.7.8" />
